--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -4,6 +4,7 @@
   position: sticky;
   top: 0;
   z-index: 1000;
+  border-bottom: 1px solid #be261b;
 }
 
 .container {
